@@ -2,18 +2,20 @@
 Hash: SHA256
 
 DIST compton-0.1_beta1.tar.gz 140466 SHA256 28a770e81ae9e33d759044a75cd2b57329b17bf211cf0e795bc73e56933df8d6 SHA512 fa3e9eb8d85071ac38aa2834f7a14679fce95e1367f6c58987e2d56c5d90e7dd6e3945557e91512199a78bc38eba7f22bdd6efa872d8b108cb33c4579501ae95 WHIRLPOOL faa3a2c23ab1af3f340615bb7593cbd0e81edd36398fb58293ddc543df80ecc13a7e2f2ff8f281cb478f94713896b081b39607c0918d524dfa931a4a1b1c412f
+DIST compton-0.1_beta2.tar.gz 144239 SHA256 7b9cd52a57326116fb5db3f5f89b7d50e17715252d9fd79b70b45ace30a6b009 SHA512 c3a019d90e32559d44e3a4969bcc15a15837db9c9519ce8cc70b1bd3d0cb16d29449f68cc2f6a8d834569c9620ec6533ab85c1586da957c69b1ae341d9584535 WHIRLPOOL 39ca9718bc79d4542d73cce39bb51fc9b9c0497a30914ab044b920f72a3c2f8cbd315c5dc97c999c1f0ca798ae692ada4626f069914b6835f0c225638b486422
 EBUILD compton-0.1_beta1.ebuild 1694 SHA256 655d9276ca26f2c9bb4392cc62b0b93a7828dada5ce9be8135f7a34c5e80fb30 SHA512 06e889832fc628110a235700fdc1b19a5c3493609b948eaae688bb66297be1af4aa6987dea2fcfe8065f5e91df9378c518e15ef1eb1567c31f5796eeb50eda8c WHIRLPOOL 2b3bae602259dc82686202be9a4a6e725e47743c94b4ccd1029eee6e3716e26e502bc3514b8a6432f61bfcc361203c31cbdf3f233e7923380df94dd07ceed1e3
-EBUILD compton-9999.ebuild 1676 SHA256 da3a0348bced11c6861748550823e67a1786c52e30bc3a89e01707043d0ebbdd SHA512 122d6c225912689d156cdc25063c6be18684a47182df2909f09ae1ee3a1c1060cf59dec4337a806b72c15587c3365a05aa7f343496f39ecc2621ddecfe1f7d03 WHIRLPOOL dcf5a4f6c125665727ef6f4a95bb47910cc2566f1649a15f6d7cc27df9cf0e2ef443cad39165e5b3b406f468011f2c626bfb59bd9b4c9dd24bc57ca8fd5a2981
-MISC ChangeLog 2147 SHA256 f822dfc50f833773b5c4fe950482d4fbadc734abae8079938419440d15104886 SHA512 2ee83fcc0307f64037b55e074020aadf587b919cfa921c97d2fba26dcc6b850d5602e29dc27ee26279a9debf7b5d6b6e0cf526dfda1ff07215cc108ff8212474 WHIRLPOOL bb69938ae9c279461c80d602e103737ce24e3a74b613cc76b44e11fcc099913d685f7618ca84846303842cab3e9863c71b122f1c946238f6ce6d18e116790d6f
+EBUILD compton-0.1_beta2.ebuild 1777 SHA256 640b5d59b9452f3673b570f714f356b0a8b32ba3d370084a2cb99a8aac29b0cf SHA512 aec92de3d76873dd0d5608d34881cb0a3694a5e887922d0922bae4ca3baa7740277118650815a1c48bf88fef2ee5ec1ddf320af02b50aac13d196d074269edf6 WHIRLPOOL 5d24c03d919a42376a28bbe731e3d8d6e96be07943e34bac1114174bb8e92c26657d1bc9e7b366fb6df64a26ae281787c6debb54cd30d11f33e14b1a4a1dce3b
+EBUILD compton-9999.ebuild 1759 SHA256 e02be61d4a1a223864b6cd0b090338ed20db1ce92d0fb478dcab1c5883687265 SHA512 29714821ae997e4c380c27acca17d81dc22a5d947ae067a7b01fad2bb6728da685748845a2612e557c2cee29514060be4e9ebac4d4c7f8603f63141611f419d8 WHIRLPOOL 8b617f96d5f91a0a4f27af72fa8c6e7e508559e0520c4cbb35ad9c9cf1262724a3e2bd1a8bb46d8c58907e6a4fba851bda25b6f958418fc596d5124f4c662fbb
+MISC ChangeLog 2318 SHA256 7531965716731ddc52643a603006c36cd875f42ae09fe55f78215a9e5e62cbf2 SHA512 325045bd74061c7e94ce8b51e199d29cea08abf48c35ef0264b630b29bb15589a54d1c439fa46aab7579ea7484c0090a59d57f94f63b5e3055912adac4d5e886 WHIRLPOOL 3406edb76bbdb321678f98b7feaf62760d8a05a50c679bdf2acab58f2bec7e055b9b487adcea54dc6a486c9b05804be582de582738c274bb69c7c7b31474ffbe
 MISC metadata.xml 486 SHA256 1890a542f88b7ad46a66aba2ef3c601a5a4f8b504c75217c0c67185537028b9f SHA512 94b9c947f03cd85113a48ad06e8e708789599103ab1bc028da5d1608b0838b288b11cf28d0687f2e5fd59746a5b49f134719fa39280caac39fae91364bf5c452 WHIRLPOOL c5a49cef5083cb8340fa02e9d34f8aa6c0011540d5fe4c2483fa63f14324c5bfe3f5c2666fd5d17f62f6285f05fa7c4266d9c1c8ea935086c76530273c42bb0c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSCUnLAAoJEFpvPKfnPDWzbDoIAKhfI8W1VvtY4ec8TLm1l/W3
-15W031sHXsyTPq+5BMqEaRUiAuWo0iZFMo90LMze3Me9uFeuUmed3SBHyRP5VW2Z
-ae+NWP0VHY66LS73dTuTZmq1LgV2LgsCfCnpm8IPz5aqSxNqMk3hWZvHrDbRn0m+
-7vcUafzhY9AnQaJCmTTewRqcJ2ZGtHSMgF4YT+b2PyZYODe/xyUlOXqr6pSzZjgf
-e+gpsCpjPiMq8g+gE9MAgGsv44TWQL4/+R0D3nCZjERBGUSsTA5TtzejGe1JLHUZ
-dOOewiItdKLTaheQVEKIsR1BxGXaKdTs3t5PZTQaW+VooY2TP3wzKqV9b3F+u+Y=
-=dE5X
+iQEcBAEBCAAGBQJSrEM2AAoJEFpvPKfnPDWzMGkH+wSGOqXqrAC+G9zsSGWCT3C4
++c3STsiPzyMHrT98K6riUrxNZQRRQqNZtZWvOwuMixGeCD3Bm3R08XAntWFSGeov
+TBGRwNAPfFHH8vQmi6RZlP/sKPeIyd9IBWZMzIrbG5OXjpUTBAbZnUoDjNAZ4NfG
+k+7Qh8RxOBZy0VWQumnCsRGugb1bNUowk2kCTdoVfMVoVWyi6mxIwX33zRAKHzqP
+SHu1diYxqUY7dtJ5xzVEW0SrcLfHg4n+zjlsZSUU5eS+QHFjemd+0cKfD9hQXaXL
+7jp0ROHx8pmdxU+G9UfMAYfKd892dgqu6tc2xxWk0f9+8KytHRkYvWv3iSFeWV4=
+=9qYW
 -----END PGP SIGNATURE-----
