@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/compton
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/compton/ChangeLog,v 1.13 2013/08/12 20:47:00 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/compton/ChangeLog,v 1.14 2013/12/14 11:38:28 hasufell Exp $
+
+*compton-0.1_beta2 (14 Dec 2013)
+
+  14 Dec 2013; Julian Ospald <hasufell@gentoo.org> +compton-0.1_beta2.ebuild,
+  compton-9999.ebuild:
+  version bump, update live ebuild
 
 *compton-0.1_beta1 (12 Aug 2013)
 
